@@ -47,6 +47,7 @@
 - Fix: [#19767] No message when path is not connected to ride exit and is therefore unreachable for mechanics.
 - Fix: [#19800] Crash when displaying station stats with more than 62 stations.
 - Fix: [#19801] The in-game load/save window cannot be resized anymore.
+- Fix: [#19832] Some scenery group items missing from all scenery tab.
 - Fix: [#19854] Looping Coaster trains clipping through steep quarter turns down.
 - Fix: [#19858] Issue drawing simulate flag icon on alternate colour palettes.
 - Fix: [#19901] Random shop colours never assigning last colour.
